[gd_scene load_steps=8 format=3 uid="uid://c6q0eyudiwwkx"]

[ext_resource type="Theme" uid="uid://djb1bkq82a1wy" path="res://assets/resources/UI_theme.tres" id="1_ig0xl"]
[ext_resource type="Script" uid="uid://bc3ncyogrn7w8" path="res://ui/mainmenu/worldpanel.gd" id="2_pxb4b"]
[ext_resource type="Texture2D" uid="uid://cjkyiyg0n6t0e" path="res://assets/icons/symbls.png" id="3_pxb4b"]
[ext_resource type="Texture2D" uid="uid://cbeoshr0k0075" path="res://assets/style_tex.png" id="4_dnvid"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dnvid"]
atlas = ExtResource("3_pxb4b")
region = Rect2(208, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_edc7y"]
atlas = ExtResource("4_dnvid")
region = Rect2(48, 0, 48, 48)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dnvid"]
texture = SubResource("AtlasTexture_edc7y")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Worldpanel" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -240.0
offset_right = 256.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ig0xl")
script = ExtResource("2_pxb4b")
metadata/_custom_type_script = "uid://b2dy5mxgwngh6"

[node name="BackButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 24.0
offset_bottom = 22.0
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_dnvid")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -3.05176e-05
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 48

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_dnvid")

[node name="VBoxContainer" type="MarginContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="WorldList" type="ItemList" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
auto_width = true
auto_height = true

[node name="LoadButton" type="Button" parent="."]
layout_mode = 0
offset_left = 387.0
offset_top = 433.0
offset_right = 501.0
offset_bottom = 473.0
mouse_default_cursor_shape = 2
disabled = true
text = "load"

[node name="NewWorldButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 434.0
offset_right = 61.0
offset_bottom = 465.0

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="item_selected" from="MarginContainer/Panel/VBoxContainer/WorldList" to="." method="_on_world_list_item_selected"]
[connection signal="pressed" from="LoadButton" to="." method="_on_load_button_pressed"]
